# blog

./: .gitignore  Cargo.toml  Rocket.toml  first_post.sql  package.json  webpack.config.js
js/: app.js  prism.js
migrations/2018-03-21-205327_create_posts/: down.sql  up.sql
migrations/2018-04-20-055013_create_users/: up.sql
migrations/2018-09-14-144221_create_comments/: up.sql
src/: auth.rs  db.rs  lib.rs  main.rs  markdown.rs  models.rs  pagination.rs  repositories.rs  schema.rs
src/controllers/: comment.rs  login.rs  mod.rs  post.rs  user.rs
src/db/: comments.rs  mod.rs  posts.rs  users.rs
src/repositories/: comments.rs  mod.rs  post.rs  posts.rs  user.rs  users.rs
styles/: app.scss  prism.css
templates/: edit_post.html.hbs  edit_post.html.tera  index.html.hbs  index.html.tera  layout.html.hbs  layout.html.tera  login.html.hbs  post.html.hbs  post.html.tera  user_new.html.hbs
templates/post/: display.html.hbs  list.html.hbs
templates/user/: new.html.hbs
tests/: comment.rs  helpers.rs  index.rs  login.rs  main.rs  markdown.rs  models.rs  posts.rs  templates.rs  user.rs
tests/helpers/: lib.rs  mod.rs
tests/scripts/: run_tests.sh  test_db.sql
