[package]
name = "stammw_blog"
version = "0.1.0"
authors = ["Jean-Christophe BEGUE <jc.begue@devisubox.com>"]

[dependencies]
rocket = { version = "0.4.0-dev", path = "../Rocket/lib" }
rocket_codegen = { version = "0.4.0-dev", path = "../Rocket/codegen" }
diesel = { version = "1.2.2", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.10.*"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0.33"
serde_derive = "1.0.33"
serde_json = "1.0.13"
pulldown-cmark = "*"
regex = "0.2"
time = "*"

[dependencies.rocket_contrib]
version = "0.4.0-dev"
path = "../Rocket/contrib"
default-features = false
features = ["handlebars_templates"]

[[bin]]
doc = false
path = "src/main.rs"
name = "digital_rodomontad"
