[package]
authors = ["Jean-Christophe BEGUE <jc.begue@devisubox.com>"]
name = "stammw_blog"
version = "0.1.0"
[[bin]]
doc = false
name = "digital_rodomontad"
path = "src/main.rs"

[dependencies]
argon2rs = "*"
base64 = "*"
dotenv = "0.10.*"
frank_jwt = "*"
lazy_static = "*"
log = "*"
pulldown-cmark = "*"
r2d2 = "0.8"
r2d2-diesel = "1.0"
regex = "1.0.0"
serde = "1.0.33"
serde_derive = "1.0.33"
serde_json = "1.0.13"
time = "*"

[dependencies.diesel]
features = ["postgres"]
version = "1.2.2"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.16.0"

[dependencies.rocket]
version = "0.3.11"

[dependencies.rocket_codegen]
version = "0.3.11"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]
version = "0.3.11"
