[package]
authors = ["Jean-Christophe BEGUE <jc.begue@devisubox.com>"]
name = "stammw_blog"
version = "0.1.0"

[[bin]]
doc = false
name = "digital_rodomontad"
path = "src/main.rs"

[dependencies]
argon2rs = "*"
base64 = "*"
dotenv = "0.10.*"
frank_jwt = "*"
lazy_static = "*"
log = "*"
pulldown-cmark = "*"
r2d2 = "0.8"
r2d2-diesel = "1.0"
regex = "1.0.0"
serde = "1.0.33"
serde_derive = "*"
serde_json = "*"
time = "*"
slug = "*"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.diesel]
features = ["postgres", "chrono"]
version = "1.3.2"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.16.1"

[dependencies.rocket]
version = "0.4.0-rc.1"

[dependencies.rocket_codegen]
version ="0.4.0-rc.1"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates", "json", "diesel_postgres_pool"]
version = "0.4.0-rc.1"
